force header container z-index to 99 to temporary fixed #1

--- a/app/styles/main.css
+++ b/app/styles/main.css
@@ -16,3 +16,7 @@ body {
 .page-title {
   outline: none;
 }
+
+#headerContainer {
+  z-index: 99;
+}
